Blog alignment fixied

--- a/css/style.css
+++ b/css/style.css
@@ -704,6 +704,9 @@ article {
 
 .blog-content .blog-meta p {
   margin-top: 20px;
+}
+
+#artcl-txt {
   text-align: justify;
 }
 
